--- a/index.html
+++ b/index.html
@@ -216,12 +216,17 @@ body {
 }
 
 .card-buttons {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #316c6e;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+   padding: 12px 20px;
+   padding-left: 35px;
+   padding-right: 0px;
+            background-color: #007bff;
+            color: #ffffff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: bold;
+            transition: background-color 0.3s, transform 0.3s;
 
 
   button {
